--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
-body{
-	font-family: Helvetica, Arial, sans-serif;
-	background-color: rgb(0, 7, 1);
-	color: rgb(222, 255, 221);
+body {
+  font-family: Helvetica, Arial, sans-serif;
+  background-color: rgb(0, 7, 1);
+  color: rgb(222, 255, 221);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 h2 {
-	font-weight: normal;
+  font-weight: normal;
 }
 
 img {
-	width: 300px;
+  width: 300px;
 }
