--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body{
 	font-family: Helvetica, Arial, sans-serif;
 	background-color: rgb(0, 7, 1);
 	color: rgb(222, 255, 221);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 h2 {
